# LiveTalkingShow

./: .env.example  .gitignore  README-EN.md  README-LOCAL.md  README.md  app.py  config.py  config.yaml  entrypoint.sh  pyproject.toml  requirements.txt  start-livetalking.sh
avatars/: base_avatar.py  musetalk_avatar.py  ultralight_avatar.py  wav2lip_avatar.py
avatars/audio_features/: mel.py
avatars/musetalk/: myutil.py
avatars/musetalk/utils/: blending.py  preprocessing.py
avatars/wav2lip/: genavatar.py
docs/: API-PROTOCOL.md  SPEAKING-MOTION-CLIPS.md  动作素材生成卡住问题记录-2026-06-04.md  后端启动失败问题记录-2026-06-03.md  项目进度记录-2026-06-03-1315.md
scripts/: download-models.sh  setup-musetalk-env.sh
server/: alpha_stream.py  alpha_webrtc.py  routes.py  rtc_manager.py  session_manager.py  webrtc.py
streamout/: router.py  webrtc.py
testclient/: .env.example  .gitignore  README.md  load-env-defaults.sh  start-overlay.sh  start-tts.sh  start-web.sh
testclient/backend/: pyproject.toml  robottts_test_server.py
testclient/overlay/: .env.example  .gitignore  README.md  audio-worklet.js  control.js  controlbar.html  controlbar.js  main.js  package-lock.json  package.json  preload.js  renderer.html  start.sh  style.css  viewer.html  viewer.js
testclient/web/: .env.example  README.md  index.html  motion.html  package-lock.json  package.json  vite.config.js
testclient/web/src/: main.jsx  motion.jsx  styles.css
tools/: build_motion_clips.py  build_speaking_motion_clip.py  chroma_key_video.py  rebuild_avatar_from_coords.py
tts/: robottts.py
utils/: device.py  image.py
web/: alpha-webrtc.html
