[project]
name = "livetalking-service"
version = "0.1.0"
description = "LiveTalking service adapted for GZHU robot runtime integration."
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch==2.5.0+cu124",
    "torchvision==0.20.0+cu124",
    "torch-ema",
    "ninja",
    "trimesh",
    "opencv-python",
    "tensorboardX",
    "numpy<2",
    "pandas",
    "tqdm",
    "matplotlib",
    "PyMCubes",
    "rich",
    "dearpygui",
    "packaging",
    "scipy",
    "scikit-learn",
    "face_alignment",
    "python_speech_features",
    "numba",
    "resampy",
    "soundfile==0.12.1",
    "einops",
    "configargparse",
    "PyYAML",
    "lpips==0.1.3",
    "imageio-ffmpeg",
    "transformers==4.46.2",
    "edge_tts",
    "flask",
    "flask_sockets",
    "opencv-python-headless",
    "aiortc",
    "aiohttp_cors",
    "ffmpeg-python",
    "omegaconf",
    "diffusers",
    "accelerate",
    "librosa",
    "openai",
    "websocket-client",
    "websockets==12.0",
    "typeguard==2.13.3",
    "onnxruntime-gpu",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
